[gd_scene load_steps=2 format=3 uid="uid://bd4s565w4l1b3"]

[ext_resource type="Script" uid="uid://bxgibainwug7q" path="res://scripts/level_graph/level_graph.gd" id="1_617ho"]

[node name="LevelGraph" type="GraphEdit"]
texture_filter = 1
offset_right = 1152.0
offset_bottom = 648.0
scroll_offset = Vector2(-456, -270)
right_disconnects = true
script = ExtResource("1_617ho")

[node name="EntryPoint" type="GraphNode" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 330.0
offset_right = 212.0
offset_bottom = 389.0
mouse_filter = 1
position_offset = Vector2(-401, 60)
title = "Entry Point"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Control" type="Control" parent="EntryPoint"]
layout_mode = 2

[connection signal="connection_request" from="." to="." method="_on_connect_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnect_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
